added sounds, and changed some texts

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" href="./assets/styles/style.css" />
 
-    <title>Dev Simulator</title>
+    <title>Junior Web Dev Simulator</title>
   </head>
   <body>
 
@@ -28,7 +28,7 @@
       <div class="teste2 d-flex justify-content-center flex-column align-items-center justify-content-center">
         <h1>Junior Web Dev Simulator</h1>
         
-        <p>Você é um aluno do bootcamp da Ironhack e precisa terminar o seu LAB. Porém seu código está cheio de bugs. Elimine-os antes que Pedro Resch corrija seu trabalho. A medida que você remove os bugs, você ganha pontos de safadeza diretamente do Alê.</p>
+        <p>Você é um aluno do bootcamp da Ironhack e precisa terminar o seu LAB. Porém seu código está cheio de bugs. Elimine 15 bugs para ter seu LAB aprovado. A medida que você remove os bugs, você ganha pontos.</p>
 
         <p>Instruções:</p>
 
@@ -83,7 +83,6 @@
       "
     >
 
-      <!-- <h1>Jogo da velha</h1> -->
 
       <div id="btn-div" class="d-flex justify-content-between">
         <button id="start-btn" class="btns">start</button>
@@ -141,12 +140,6 @@
         
       </div>
 
-
-      <!-- <span
-        ><strong>Jogador atual:</strong> <span id="currentPlayer"></span
-      ></span>
-
-      <span><strong>Vencedor:</strong> <span id="winner"></span></span> -->
     </div>
 
     <script src="./assets/scripts/game.js"></script>
