--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
         <div>
           <ul>
-            <li>Quando um bug aparecer, clique sobre ele para removê-lo do seu código</li>
-            <li>Os bugs aparecem aleatóriamente na tela e permanecem por uma faixa de tempo aleatória</li>
-            <li>Se não clicado a tempo, o bug some e você perde uma vida</li>
+            <li>Quando um bug aparecer, clique sobre ele para removê-lo do seu código.</li>
+            <li>Os bugs aparecem aleatóriamente na tela e permanecem por uma faixa de tempo.</li>
+            <li>Se não clicado a tempo, o bug some e você perde uma vida.</li>
           </ul>
         </div>
 
@@ -87,7 +87,7 @@
       <div id="btn-div" class="d-flex justify-content-between">
         <button id="start-btn" class="btns">start</button>
         <button class="btns lives">Vidas: 4</button>
-        <h6 id="safadeza-pts"> <img src="./assets/images/safadeza-coin.png" alt=""> Pontos de Safadeza: 0</h6>
+        <h6 id="safadeza-pts"> <img src="./assets/images/safadeza-coin.png" alt=""> Pontos: 0</h6>
         </div>
         
 
